--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   background-color: var(--medium-dark);
+  margin-top:0px;
 }
 .box>button{
   margin:0 2rem 2rem 2rem;
@@ -72,6 +73,15 @@ button:active,
 button:target{
 color:var(--accent);
 background-color: var(--darkest);
+}
+.buttons{
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  padding:30px 0px;
+}
+.styleButton{
+  margin-right: 20px;
 }
 
 #cvBackground{
